# leptos-lucide-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  MIGRATION.md  Makefile.old  README.md  build.rs  justfile
coverage/: tarpaulin-report.html
examples/: .gitignore  Cargo.toml  advanced.html  advanced_styling.md  advanced_styling.rs  index.html  simple.rs
src/: lib.rs
