[package]
name = "lucide-leptos"
version = "0.1.3"
edition = "2021"
description = "Lucide icons for Leptos with tree-shaking support"
license = "MIT"
repository = "https://github.com/soulcorrea/lucide-leptos"
keywords = ["leptos", "icons", "lucide", "ui", "components"]
categories = ["web-programming", "gui"]

[dependencies]
leptos = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
convert_case = "0.8"
prettyplease = "0.2"

[features]
default = []
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]
csr = ["leptos/csr"]

[lib]
name = "lucide_leptos"
path = "src/lib.rs"
