[package]
name = "leptos-lucide-rs"
version = "0.2.0"
edition = "2021"
description = "A comprehensive Lucide icon library for Leptos with tree-shaking support and zero-cost runtime overhead."
license = "MIT"
repository = "https://github.com/soulcorrea/leptos-lucide-rs"
keywords = ["leptos", "icons", "lucide", "ui", "components"]
categories = ["web-programming", "gui"]

[dependencies]
leptos = "0.8"
lucide-svg-rs = "0.2"

[build-dependencies]
lucide-svg-rs = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
convert_case = "0.9"

[features]
default = []
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]
csr = ["leptos/csr"]

[lib]
name = "leptos_lucide_rs"
path = "src/lib.rs"
