[package]
name = "leptos-lucide-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple"
path = "simple.rs"

[[bin]]
name = "advanced_styling"
path = "advanced_styling.rs"

[dependencies]
leptos = { version = "0.8.6", features = ["csr"] }
leptos-lucide = { path = ".." }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Document", "Element", "HtmlElement", "Window"]
