[package]
name = "leptos-lucide-rs-examples"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "simple"
path = "simple.rs"

[[bin]]
name = "advanced_styling"
path = "advanced_styling.rs"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos-lucide-rs = { path = ".." }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", default-features = false, features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console", "Document", "Element", "HtmlElement", "Window"]
